# loot-luck-liability

./: .gitignore  AGENTS.md  AI-Provenance-Log.md  AI-Use-Statement.md  CONTRIBUTING.md  LICENSE  README.md  ROGUELITE_DIRECTION.md  VERSION.md  capacitor.config.json  index.html  package-lock.json  package.json  progress.md  vite.config.js
android/app/: build.gradle
android/app/src/main/java/io/jazhikho/lootluckliability/: MainActivity.java
android/app/src/main/res/values/: strings.xml
scripts/: release-android.mjs  release-utils.mjs  release-web.mjs  release-windows.mjs  sync-assets.mjs
src/: Game.jsx  Game.test.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Bar.jsx  Btn.jsx  ConfirmDialog.jsx  DangerMeter.jsx  LocaleSelector.jsx  LogBox.jsx  StatsBar.jsx  StoryPanel.jsx  ToastLayer.jsx
src/data/: Constants.js  Constants.test.js  Content.js  Defaults.js
src/i18n/: dialogueResources.js  index.jsx  index.test.js  localeMetadata.js  resourceUtils.js  resources.en.js  resources.es.js  resources.ja.js  resources.js  resources.pt-br.js
src/screens/: CombatView.jsx  DeadScreen.jsx  FloorHubView.jsx  PickDungeonView.jsx  ProfileScreen.jsx  ShopView.jsx  TitleScreen.jsx
src/utils/: AppVersion.js  DungeonCatalog.js  DungeonCatalog.test.js  GameLogic.js  GameLogic.test.js  Helpers.js  LuckPresentation.js  LuckPresentation.test.js  SaveData.js  SaveData.test.js
