[package]
name = "loot_luck_liability"
version = "1.5.0"
description = "Loot, Luck & Liability desktop wrapper"
authors = ["Jazhikho"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loot_luck_liability_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "LootLuckLiability"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
